--- a/assets/scss/components/_form.scss
+++ b/assets/scss/components/_form.scss
@@ -109,7 +109,8 @@
 
 			@include mobile {
 				margin-left: 0;
-				font-size: 3em;
+				font-size: 1rem;
+				padding: 0;
 			}
 		}
 
